# curv

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/curv/: __init__.py  __main__.py  app.py  clipboard.py  input.py  presets.py  state.py
src/curv/math/: __init__.py  bezier.py  bresenham.py
src/curv/render/: __init__.py  canvas.py  layout.py  panels.py
tests/: __init__.py  test_bezier.py  test_bresenham.py  test_canvas.py
