[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "curv"
version = "0.1.0"
description = "Terminal bezier curve editor"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7.0",
    "readchar>=4.0.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
curv = "curv.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/curv"]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = ["ANN101", "E501"]

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=curv --cov-report=term-missing"
